--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,7 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)/$ /$1 [L,R=301]
 
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule . index.php [L]
